<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/toll_Bar_Color"
                        app:title="@string/app_name"
                        app:navigationIcon="@drawable/ic_arrow_back"
                        app:menu="@menu/top_app_bar" />

                </com.google.android.material.appbar.AppBarLayout>


                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    app:adSize="BANNER"
                    app:adUnitId="ca-app-pub-3940256099942544/6300978111"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCounter3" />


                <TextView
                    android:id="@+id/profileUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/big_headlines_color"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.38"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

                <ImageView
                    android:id="@+id/profileIsCheck"
                    android:layout_width="20dp"
                    android:layout_height="20sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_check"
                    app:layout_constraintBottom_toBottomOf="@+id/profileUserName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/profileUserName"
                    app:layout_constraintTop_toTopOf="@+id/profileUserName" />

                <TextView
                    android:id="@+id/followersCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:textColor="@color/big_headlines_color"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileUserName" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.50" />

                <TextView
                    android:id="@+id/followingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/big_headlines_color"                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/followersCount" />

                <TextView
                    android:id="@+id/textCounter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/followers"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    android:textColor="@color/big_headlines_color"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/followersCount" />

                <TextView
                    android:id="@+id/textCounter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/following"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    android:textColor="@color/big_headlines_color"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/followersCount" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCounter1"

                    >
                    <tag android:id="@+id/zoomable" android:value="ZoomableViewTag" />

                </de.hdodenhof.circleimageview.CircleImageView>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_320"
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_marginTop="42dp"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <TextView
                    android:id="@+id/textCounter3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/_320p"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    android:textColor="@color/big_headlines_color"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toStartOf="@+id/profile_image_320"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image_320"
                    app:layout_constraintVertical_bias="0.0" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_1080"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.35"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <TextView
                    android:id="@+id/textCounter4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/_1080p"
                    android:textColor="@color/big_headlines_color"
                    android:textSize="24sp"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image_1080"
                    app:layout_constraintStart_toStartOf="@+id/profile_image_1080"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image_1080"
                    app:layout_constraintVertical_bias="0.0" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>